--- a/src/main/java/com/pandateam/sfsaludmaven/gui/panels/JPanAdmCuidadores.form
+++ b/src/main/java/com/pandateam/sfsaludmaven/gui/panels/JPanAdmCuidadores.form
@@ -32,6 +32,7 @@
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace pref="331" max="32767" attributes="0"/>
           </Group>
+          <Component id="jPanContentCuidadores" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -39,7 +40,8 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="512" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jPanContentCuidadores" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -56,5 +58,20 @@
         <Property name="text" type="java.lang.String" value="Administraci&#xf3;n de Cuidadores"/>
       </Properties>
     </Component>
+    <Container class="javax.swing.JPanel" name="jPanContentCuidadores">
+
+      <Layout>
+        <DimensionLayout dim="0">
+          <Group type="103" groupAlignment="0" attributes="0">
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+          </Group>
+        </DimensionLayout>
+        <DimensionLayout dim="1">
+          <Group type="103" groupAlignment="0" attributes="0">
+              <EmptySpace min="0" pref="506" max="32767" attributes="0"/>
+          </Group>
+        </DimensionLayout>
+      </Layout>
+    </Container>
   </SubComponents>
 </Form>
