--- a/src/main/java/com/pandateam/sfsaludmaven/gui/panels/JPanAdmServiciosCargar.form
+++ b/src/main/java/com/pandateam/sfsaludmaven/gui/panels/JPanAdmServiciosCargar.form
@@ -271,6 +271,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="66" green="0" red="0" type="rgb"/>
         </Property>
+        <Property name="enabled" type="boolean" value="false"/>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Roboto Condensed" size="14" style="0"/>
         </Property>
